<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtFirstName"
        android:hint="@string/first_name"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:layout_below="@id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLastName"
        android:hint="@string/last_name"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:layout_below="@id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUsername"
        android:hint="@string/username"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <EditText
        android:layout_below="@id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <EditText
        android:layout_below="@id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtConfirmPassword"
        android:hint="@string/confirm_password"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <Button
        android:layout_below="@id/edtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/register"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>